# deep-research-agent

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.kiro/specs/deep-research-chatbot/: design.md  requirements.md  tasks.md
.kiro/specs/simple-deepsearch-chatbot/: design.md  tasks.md  (+1 more)
.kiro/steering/: create-file.md  korean-language.md  project-guideline.md  venv-setting.md
agents/: __init__.py
api/: __init__.py
config/: __init__.py  settings.py
frontend/: package-lock.json  package.json
models/: __init__.py
src/: __init__.py  app.py
src/agents/: __init__.py  agent_loader.py  agent_registry.py  base_agent.py  message_system.py  result_sharing.py
src/config/: __init__.py  config.py  langsmith_config.py
src/models/: __init__.py  conversation.py  research.py  search.py  test_conversation_models.py  test_research_models.py  test_search_models.py  vector_db.py
src/tools/: __init__.py  data_processor.py  duckduckgo_search.py  tavily_search.py  vector_db_manager.py
src/utils/: __init__.py  conversation_memory.py  error_utils.py  logging_utils.py  state_manager.py  test_conversation_memory.py  test_state_manager_scenarios.py
src/workflows/: __init__.py
tests/: __init__.py  test_main.py
tests/tools/: __init__.py  test_data_processor.py  test_duckduckgo_search.py  test_duckduckgo_search_mock.py  test_duckduckgo_search_simple.py  test_tavily_search.py  test_vector_db_manager.py
tests/utils/: __init__.py  test_simple_conversation_memory.py.bak  test_state_manager.py
tools/: __init__.py
workflows/: __init__.py
(+1 files in other folders)
